# HTWG

./: .gitignore  README.md
PT2/: build.xml  prog_checks.xml
PT2/a3/: Evaluator.java  Tokenizer.java
RA/: Testprozedur G.asm  mips1.asm  mips2.2.asm  mips2.2Besser.asm  mips2.3.asm  mips2.5neu.asm  Übung 5_2_2 - Vorlage.ods
S2/PT2/: build.xml  prog_checks.xml
S2/RA/: 1.4.asm  a5Rechner.py  (+4 more)
Sysprog/: Teilnahmeprotokoll.html
Sysprog/c/: CMakeLists.txt  bubblesort  out.txt  stringsort  stringsort-optimiert
Sysprog/c/a1/: aufgabe1  aufgabe1.c.orig  protokoll-aufgabe1.txt
Sysprog/c/a2/: CMakeLists.txt  Makefile  bubblesort  bubblesort.c  out.txt  protokoll-aufgabe2.md
Sysprog/c/a2/bubblesort.dSYM/Contents/Resources/DWARF/: bubblesort
Sysprog/c/a2/bubblesort.dSYM/Contents/Resources/Relocations/aarch64/: bubblesort.yml
Sysprog/c/a3/: a.out  stringsort  stringsort-optimiert  stringsort-optimiert.c  stringsort.c
Sysprog/c/a3/stringsort-optimiert.dSYM/Contents/Resources/DWARF/: stringsort-optimiert
Sysprog/c/a3/stringsort-optimiert.dSYM/Contents/Resources/Relocations/aarch64/: stringsort-optimiert.yml
Sysprog/c/a3/stringsort.dSYM/Contents/Resources/DWARF/: stringsort
Sysprog/c/a3/stringsort.dSYM/Contents/Resources/Relocations/aarch64/: stringsort.yml
Sysprog/c/a4/: fileinfo.c  fileinfo.h
Sysprog/c/a5/: benotung.h  fachnote.cpp  fachnoten_liste.cpp  fachnoten_liste.h
Sysprog/c/bubblesort.dSYM/Contents/Resources/DWARF/: bubblesort
Sysprog/c/test/: a.out  minmaxsum-pointer.c
stoch/: .gitignore  53.py  onlineVorlesungUebung.ipynb  test.py
(+196 files in other folders)
